# sepa-flood-alerts-homeassistant

./: CHANGELOG.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  release-please-config.json  renovate.json5
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yml  release-please.yml
custom_components/sepa_flood_alerts/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
