[project]
name = "sepa-flood-alerts-homeassistant"
version = "0.3.0"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF012", # mutable class attrs are idiomatic in HA entities
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.sepa_flood_alerts"]

[tool.pyright]
pythonVersion = "3.12"
include = ["custom_components/sepa_flood_alerts"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
