[project]
name = "sepa-flood-alerts-homeassistant"
version = "0.3.0"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length is enforced by the formatter
    "RUF012", # mutable class attributes are idiomatic in HA entities
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.sepa_flood_alerts"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
include = ["custom_components/sepa_flood_alerts"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
